# ai-clock

./: .gitignore  CMakeLists.txt  build-c.bat  build-c.sh  vcpkg.json
cmake/: common-setting.cmake  custom-var-example.cmake
docs/: ai.txt  ai00.txt  ai01.txt  ai02.txt  ai03.txt  ai04.txt  ai05.txt  ai06.txt  ai07.txt  ai08.txt  ai09.txt  ai10.txt  ai11.txt  ai12.txt  ai13.txt  ai14.txt  ai15.txt
src/: ai_wx_5.cpp
